--- a/dotnet-core-redis/CsRedis.Example/appsettings.json
+++ b/dotnet-core-redis/CsRedis.Example/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "CsRedisConnectString": "127.0.0.1:6379,password=,defaultDatabase=csredis,prefix=csredis-example",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
