--- a/dotnet-core-redis/CsRedis.Example/CsRedis.Example.csproj
+++ b/dotnet-core-redis/CsRedis.Example/CsRedis.Example.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Caching.CSRedis" Version="3.0.51" />
+    <PackageReference Include="CSRedisCore" Version="3.0.62" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
