支付 多文件上传，但swagger不显示效果

--- a/asp.net-core-qiniu/Qiniu.Web/appsettings.json
+++ b/asp.net-core-qiniu/Qiniu.Web/appsettings.json
@@ -24,7 +24,7 @@
       "Email": "luoyunchong@foxmail.com"
     },
     //以便于在界面上显示验证（Authorize）按钮，验证按钮处理逻辑基于 wwwroot/swagger/ui/index.html
-    "Authorize": "true",
+    "Authorize": "false",
     "HiddenApi": {
       "IsEnabled": "false",
       "HiddenUrls": ""
