:sparkles: add SPA GitHub快速登录

--- a/dotnetcore3.1/VoVo.AspNetCore.OAuth2/VoVo.AspNetCore.OAuth2.WebAPI/appsettings.json
+++ b/dotnetcore3.1/VoVo.AspNetCore.OAuth2/VoVo.AspNetCore.OAuth2.WebAPI/appsettings.json
@@ -6,5 +6,17 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WithOrigins": [ "http://localhost:8080" ],
+  "Authentication": {
+    "JwtBearer": {
+      "SecurityKey": "JWTStudyWebsite_DI20DXU3",
+      "Issuer": "JWTStudy",
+      "Audience": "JWTStudyWebsite"
+    },
+    "GitHub": {
+      "ClientId": "6daf87d8c206b823763a",
+      "ClientSecret": "1d8cc4641f5f7b88bb3126605b8824e65077b2e3"
+    }
+  }
 }
