--- a/dotnetcore3.1/VoVo.AspNetCore.OAuth2/VoVo.AspNetCore.OAuth2.WebAPI/VoVo.AspNetCore.OAuth2.WebAPI.csproj
+++ b/dotnetcore3.1/VoVo.AspNetCore.OAuth2/VoVo.AspNetCore.OAuth2.WebAPI/VoVo.AspNetCore.OAuth2.WebAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,6 +9,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 
 </Project>
