update freesql autofac di 跨方法事务

--- a/Authentication-and-Authorization/IdentityServer4/IdentityServer4.Service.csproj
+++ b/Authentication-and-Authorization/IdentityServer4/IdentityServer4.Service.csproj
@@ -152,6 +152,7 @@
     <PackageReference Include="IdentityServer4" Version="3.1.2" />
     <PackageReference Include="IdentityServer4.Storage" Version="3.1.2" />
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.6" />
+	<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.7" />
   </ItemGroup>
 
   <ItemGroup>
