--- a/Authentication-and-Authorization/IdentityServer4/appsettings.json
+++ b/Authentication-and-Authorization/IdentityServer4/appsettings.json
@@ -9,5 +9,5 @@
       "Port": 5100
     }
   },
-  "WithOrigins": [ "http://localhost:44393" ]
+  "WithOrigins": [ "http://localhost:5000", "http://localhost:8080" ]
 } 
