--- a/Web-Socket/Signlar/SignlarDemo/SignlarDemo.csproj
+++ b/Web-Socket/Signlar/SignlarDemo/SignlarDemo.csproj
@@ -12,6 +12,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.5" />
 		<PackageReference Include="DotNetCore.Security" Version="11.42.0" />
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
 		<PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.76" />
 	</ItemGroup>
 
