--- a/ORM/FreeSql/OvOv.FreeSql.AutoFac.DynamicProxy/OvOv.FreeSql.AutoFac.DynamicProxy.csproj
+++ b/ORM/FreeSql/OvOv.FreeSql.AutoFac.DynamicProxy/OvOv.FreeSql.AutoFac.DynamicProxy.csproj
@@ -7,8 +7,8 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
         <PackageReference Include="FreeSql" Version="1.9.0-preview0906" />
-		<PackageReference Include="FreeSql.Provider.MySql" Version="1.9.0-preview0906" />
-		<!--<PackageReference Include="FreeSql.Provider.MySqlConnector" Version="1.9.0-preview0906" />-->
+		<!--<PackageReference Include="FreeSql.Provider.MySql" Version="1.9.0-preview0906" />-->
+		<PackageReference Include="FreeSql.Provider.MySqlConnector" Version="1.9.0-preview0906" />
 		<PackageReference Include="FreeSql.Provider.Sqlite" Version="1.9.0-preview0906" />
 		<PackageReference Include="FreeSql.Provider.SqlServer" Version="1.9.0-preview0906" />
         <PackageReference Include="FreeSql.DbContext" Version="1.9.0-preview0906" />
