add mysql ,sql server 创建数据库

--- a/ORM/FreeSql/OvOv.FreeSql/appsettings.json
+++ b/ORM/FreeSql/OvOv.FreeSql/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Default": "Data Source=127.0.0.1;Port=3306;User ID=root;Password=root;Initial Catalog=ovov_freesql_repository;Charset=utf8;SslMode=none;Max pool size=10",
+  "MariaDB": "Data Source=127.0.0.1;Port=3308;User ID=root;Password=123456;Initial Catalog=ovov_freesql_repository;Charset=utf8;SslMode=none;Max pool size=10",
+  "SqlServer": "Data Source=.;Integrated Security=True;Initial Catalog=ovov_freesql_repository;Pooling=true;Min Pool Size=1",
+  //"AttachDBFilename=D": "\\\\code\\\\db\\\\ovov_freesql_repository.mdf;",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
