--- a/ORM/FreeSql/OvOv.Core/OvOv.Core.csproj
+++ b/ORM/FreeSql/OvOv.Core/OvOv.Core.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
-    <PackageReference Include="FreeSql" Version="1.9.0-preview0912" />
+    <PackageReference Include="FreeSql" Version="2.0.102" />
   </ItemGroup>
 
 </Project>
