--- a/ORM/FreeSql/OvOv.FreeSql/OvOv.FreeSql.csproj
+++ b/ORM/FreeSql/OvOv.FreeSql/OvOv.FreeSql.csproj
@@ -9,10 +9,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
-		<PackageReference Include="FreeSql" Version="2.0.102" />
+		<PackageReference Include="FreeSql" Version="2.0.105" />
 		<!--<PackageReference Include="FreeSql.Provider.MySql" Version="1.9.0-preview0906" />-->
-		<PackageReference Include="FreeSql.Provider.MySqlConnector" Version="2.0.102" />
-		<PackageReference Include="FreeSql.Provider.SqlServer" Version="2.0.102" />
+		<PackageReference Include="FreeSql.Provider.Odbc" Version="2.0.105" />
+		<PackageReference Include="FreeSql.Provider.MySqlConnector" Version="2.0.105" />
+		<PackageReference Include="FreeSql.Provider.SqlServer" Version="2.0.105" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
 	</ItemGroup>
