--- a/ORM/FreeSql/OvOv.WindowsFormsApp/OvOv.WindowsFormsApp.csproj
+++ b/ORM/FreeSql/OvOv.WindowsFormsApp/OvOv.WindowsFormsApp.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FreeSql" Version="2.0.0-preview1120" />
-	  <PackageReference Include="FreeSql.DbContext" Version="2.0.0-preview1120" />
-	  <PackageReference Include="FreeSql.Provider.Sqlite" Version="2.0.0-preview1120" />
+    <PackageReference Include="FreeSql" Version="2.5.200" />
+	  <PackageReference Include="FreeSql.DbContext" Version="2.5.200" />
+	  <PackageReference Include="FreeSql.Provider.Sqlite" Version="2.5.200" />
   </ItemGroup>
 
 </Project>
