--- a/Authentication-and-Authorization/aspnetcore-oatuth2/OvOv.AspNetCore.OAuth2.MVC/Properties/launchSettings.json
+++ b/Authentication-and-Authorization/aspnetcore-oatuth2/OvOv.AspNetCore.OAuth2.MVC/Properties/launchSettings.json
@@ -1,22 +1,20 @@
-﻿{
+{
   "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:64282",
-      "sslPort": 44319
-    }
-  },
   "profiles": {
     "OvOv.AspNetCore.OAuth2.MVC": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
