update api Fix login issue Exception: Correlation failed

--- a/Authentication-and-Authorization/aspnetcore-oatuth2/OvOv.AspNetCore.OAuth2.WebAPI/OvOv.AspNetCore.OAuth2.WebAPI.csproj
+++ b/Authentication-and-Authorization/aspnetcore-oatuth2/OvOv.AspNetCore.OAuth2.WebAPI/OvOv.AspNetCore.OAuth2.WebAPI.csproj
@@ -3,12 +3,19 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>VoVo.AspNetCore.OAuth2.WebAPI</RootNamespace>
+    <UserSecretsId>78b3e225-661f-4a2a-a3bb-4ee1d8b72cc4</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="3.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\registry.cn-hangzhou.aliyuncs.com.pubxml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
