--- a/ORM/FreeSql/OvOv.Core/OvOv.Core.csproj
+++ b/ORM/FreeSql/OvOv.Core/OvOv.Core.csproj
@@ -1,12 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="9.0.0" />
-    <PackageReference Include="FreeSql" Version="2.5.200" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="11.0.1" />
+		<PackageReference Include="FreeSql.DbContext" Version="3.2.666-preview20220703" />
+		<PackageReference Include="FreeSql.Provider.Odbc" Version="3.2.666-preview20220703" />
+		<PackageReference Include="FreeSql.Provider.MySqlConnector" Version="3.2.666-preview20220703" />
+		<PackageReference Include="FreeSql.Provider.Sqlite" Version="3.2.666-preview20220702" />
+		<PackageReference Include="FreeSql.Provider.SqlServer" Version="3.2.666-preview20220703" />
+	</ItemGroup>
 
 </Project>
