--- a/ORM/FreeSql/OvOv.FreeSql.AutoFac.DynamicProxy/OvOv.FreeSql.AutoFac.DynamicProxy.csproj
+++ b/ORM/FreeSql/OvOv.FreeSql.AutoFac.DynamicProxy/OvOv.FreeSql.AutoFac.DynamicProxy.csproj
@@ -1,21 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
-        <PackageReference Include="FreeSql" Version="2.5.200" />
-		<!--<PackageReference Include="FreeSql.Provider.MySql" Version="1.9.0-preview0906" />-->
-		<PackageReference Include="FreeSql.Provider.MySqlConnector" Version="2.5.201" />
-		<PackageReference Include="FreeSql.Provider.Sqlite" Version="2.5.200" />
-		<PackageReference Include="FreeSql.Provider.SqlServer" Version="2.5.200" />
-        <PackageReference Include="FreeSql.DbContext" Version="2.5.200" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
-        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
-        <PackageReference Include="Autofac.Extras.DynamicProxy" Version="5.0.0" />
-        <PackageReference Include="Castle.Core.AsyncInterceptor" Version="1.7.0" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.1" />
+        <PackageReference Include="Castle.Core.AsyncInterceptor" Version="2.1.0" />
     </ItemGroup>
 
     <ItemGroup>
