--- a/ORM/FreeSql/OvOv.FreeSql.Repository/OvOv.FreeSql.Repository.csproj
+++ b/ORM/FreeSql/OvOv.FreeSql.Repository/OvOv.FreeSql.Repository.csproj
@@ -1,24 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
 		<UserSecretsId>f73269d0-e5b0-41bc-afb0-ae48bab6015c</UserSecretsId>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
-		<PackageReference Include="FreeSql" Version="2.5.200" />
-		<PackageReference Include="FreeSql.Provider.MySql" Version="2.5.200" />
-		<PackageReference Include="FreeSql.DbContext" Version="2.5.200" />
-		<PackageReference Include="FreeSql.Provider.Sqlite" Version="2.5.200" />
-		<PackageReference Include="FreeSql.Provider.SqlServer" Version="2.5.200" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+		<PackageReference Include="FreeSql.Provider.MySql" Version="3.2.666-preview20220703" />
+		<PackageReference Include="FreeSql.Provider.Sqlite" Version="3.2.666-preview20220703" />
+		<PackageReference Include="FreeSql.Provider.SqlServer" Version="3.2.666-preview20220703" />
 		<PackageReference Include="FreeSql.DynamicProxy" Version="1.5.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.6" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.6" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.1.4" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.3.1" />
 	</ItemGroup>
 
 	<ItemGroup>
