--- a/ORM/FreeSql/OvOv.WindowsFormsApp/OvOv.WindowsFormsApp.csproj
+++ b/ORM/FreeSql/OvOv.WindowsFormsApp/OvOv.WindowsFormsApp.csproj
@@ -2,14 +2,13 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FreeSql" Version="2.5.200" />
-	  <PackageReference Include="FreeSql.DbContext" Version="2.5.200" />
-	  <PackageReference Include="FreeSql.Provider.Sqlite" Version="2.5.200" />
+	  <PackageReference Include="FreeSql.DbContext" Version="3.2.666-preview20220703" />
+	  <PackageReference Include="FreeSql.Provider.Sqlite" Version="3.2.666-preview20220703" />
   </ItemGroup>
 
 </Project>
