--- a/Authentication-and-Authorization/ApiService/Properties/launchSettings.json
+++ b/Authentication-and-Authorization/ApiService/Properties/launchSettings.json
@@ -1,12 +1,18 @@
-﻿{
+{
   "profiles": {
     "ApiService": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
