--- a/Authentication-and-Authorization/IdentityServer4/Properties/launchSettings.json
+++ b/Authentication-and-Authorization/IdentityServer4/Properties/launchSettings.json
@@ -1,13 +1,18 @@
-﻿{
- 
+{
   "profiles": {
     "IdentityServer4": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5001"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
