--- a/Application-Frameworks/CAP/OvOv.CAP/OvOv.CAP.csproj
+++ b/Application-Frameworks/CAP/OvOv.CAP/OvOv.CAP.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetCore.CAP" Version="3.1.1-preview-115802637" />
-    <PackageReference Include="DotNetCore.CAP.MySql" Version="3.1.1-preview-115802637" />
-    <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="3.1.1-preview-115802637" />
+    <PackageReference Include="DotNetCore.CAP" Version="7.1.1" />
+    <PackageReference Include="DotNetCore.CAP.MySql" Version="7.1.1" />
+    <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="7.1.1" />
   </ItemGroup>
 
 
