--- a/ORM/FreeSql/OvOv.FreeSql.Repository/OvOv.FreeSql.Repository.csproj
+++ b/ORM/FreeSql/OvOv.FreeSql.Repository/OvOv.FreeSql.Repository.csproj
@@ -1,22 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
 		<AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
 		<UserSecretsId>f73269d0-e5b0-41bc-afb0-ae48bab6015c</UserSecretsId>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-		<PackageReference Include="FreeSql.Provider.MySql" Version="3.2.670-preview22020917" />
-		<PackageReference Include="FreeSql.Provider.Sqlite" Version="3.2.670-preview22020917" />
-		<PackageReference Include="FreeSql.Provider.SqlServer" Version="3.2.670-preview22020917" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+		<PackageReference Include="FreeSql.Provider.MySql" Version="3.2.693" />
+		<PackageReference Include="FreeSql.Provider.Sqlite" Version="3.2.693" />
+		<PackageReference Include="FreeSql.Provider.SqlServer" Version="3.2.693" />
 		<PackageReference Include="FreeSql.DynamicProxy" Version="1.5.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.9" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.4.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.5" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
